tests/test_conn_with_only_pod_selector/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-and-egress-in-entire-cluster
  namespace: hello-world
spec:
  podSelector:
    matchLabels:
      app: a-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: 
        matchLabels:
            role: monitoring
    ports:
    - port: 8050
      protocol: TCP
